--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,6 +5,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
 @import "@fortawesome/fontawesome-free/css/all";
 
+* {
+    box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
 }
@@ -111,6 +115,12 @@ li {
 #hero > div > p > .btn {
     font-weight: bold;
     color: var(--white);
+}
+
+@media (max-width: 575.98px) {
+    .display-4 {
+        font-size: 2.2rem;
+    }
 }
 
 /* Actu */
