--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -8,10 +8,20 @@
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
             <!-- H E R O  S E C T I O N -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153217750-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153217750-1');
+</script>
             <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
                 <div class="jumbotron-fluid container-fluid text-center">
                     <h1 class="display-4 text-uppercase">Ynovagroup</h1>
-                    <p class="lead">Nous sommes LE groupement de pharmaciens indépendants</p>
+                    <p class="lead">Nous sommes le groupement de pharmaciens indépendants</p>
                     <p class="lead">
                         <a class="btn btn-success btn-sm p-2" href="#valeurs" role="button">En savoir plus</a>
                     </p>
