--- a/templates/home/mentionslegales.html.twig
+++ b/templates/home/mentionslegales.html.twig
@@ -1,6 +1,7 @@
-{% extends 'base.html.twig' %}
+﻿{% extends 'base.html.twig' %}
 
 {% block title %}Ynovagroup - Votre groupement de pharmaciens indépendants
+
 {% endblock %}
 
 {% block body %}
@@ -15,7 +16,7 @@
             <p><strong>SIRET</strong> <br> 82448493500013 // RCS Pontoise</p>
             <p><strong>Numéro de TVA intracommunautaire</strong> <br> FR19824484935</p>
             <p><strong>Adresse</strong> <br> 43 Grande Rue 95290 L’Isle-Adam</p>
-            <p><strong>Contact</strong> <br> contact@ynovagroup.com // 00 00 00 00 00</p>
+            <p><strong>Contact</strong> <br> contact@ynovagroup.com // +33 (0)9 82 38 54 56</p>
             <p><strong>Responsable de la publication</strong> <br> BABICZ Stéphane</p>
             <p><strong>Déclaration à la CNIL</strong> <br> n°XXXXXXX</p>
             <p><strong>Hébergement</strong> <br> Online SAS - BP 438 - 75366 Paris CEDEX 08 - RCS Paris B 433 115 904 (online.net)</p>
