--- a/templates/partials/_metadata.html.twig
+++ b/templates/partials/_metadata.html.twig
@@ -1,3 +1,13 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153217750-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153217750-1');
+</script>
+
 <script type="application/ld+json">
     {
         "@context": "http://schema.org/",
