--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -8,23 +8,8 @@
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
             <!-- H E R O  S E C T I O N -->
-<<<<<<< HEAD
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153217750-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-153217750-1');
-</script>
-            <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
-                <div class="jumbotron-fluid container-fluid text-center">
-=======
             <section id="hero" src="{{ asset('build/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
                 <div class="jumbotron-fluid text-center">
->>>>>>> 3b094ec8b301e4e02951fca2237b04e6a1e23884
                     <h1 class="display-4 text-uppercase">Ynovagroup</h1>
                     <p class="lead">Nous sommes le groupement de pharmaciens indépendants</p>
                     <p class="lead">
@@ -40,14 +25,12 @@
             <section id="actu" class="container p-0 text-center pb-5">
                 <!-- Section heading -->
                 <h2 class="titre font-weight-bold my-5">Les dernières actualités</h2>
-<<<<<<< HEAD
                 <div class="deck">
                     {{ include('/home/_articles.html.twig') }}
                 </div>
-=======
                 <!-- Début du carousel -->
 
-                <div class="bd-example">
+                {# <div class="bd-example">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -64,14 +47,13 @@
                                 <span class="badge badge-light">Posté le {{post.createdAt|date("d/m/y")}}</span>
                             <h5 class="font-weight-bold h3 p-5">{{post.title}}</h5>
                             <p>{{ post.content|striptags|truncate(600, true) }}</p>
-                            {# <p>{{ post.content }}</p> #}
                             <button class="btn btn-success button-actu m-5">
                                 <a href="{{ path('blog_single', {'slug': post.slug}) }}">Lire la suite</a>
                             </button>
                             {% endfor %}
                             </div>
                         </div>
-                 </div>
+                 </div> #}
                 {# <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -83,7 +65,6 @@
             </div>
             </div>
 <!-- fin du carousel -->
->>>>>>> 3b094ec8b301e4e02951fca2237b04e6a1e23884
             </section>
             {% endif %}
                         
