fix affichage des partenaires

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -543,6 +543,7 @@ td > a > i:hover {
         border: none;
 
         .card-body {
+            display: flex;
             justify-content: center;
             align-items: center;
 
