fix affichage card-deck

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -539,6 +539,10 @@ td > a > i:hover {
     flex-wrap: wrap;
     justify-content: center;
 
+    .card-deck {
+        width: 100%;
+    }
+
     .card {
         border: none;
 
